Add user handler  and route for sending otp
