# src/docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  github_com_amirazad1_creditor_api_dto.GetOtpRequest:
+    properties:
+      mobileNumber:
+        maxLength: 11
+        minLength: 11
+        type: string
+    required:
+    - mobileNumber
+    type: object
   github_com_amirazad1_creditor_api_helper.BaseHttpResponse:
     properties:
       error: {}
@@ -67,6 +76,36 @@ paths:
       summary: Health Check
       tags:
       - health
+  /v1/users/send-otp:
+    post:
+      consumes:
+      - application/json
+      description: Send otp to user
+      parameters:
+      - description: GetOtpRequest
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_amirazad1_creditor_api_dto.GetOtpRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: '#/definitions/github_com_amirazad1_creditor_api_helper.BaseHttpResponse'
+        "400":
+          description: Failed
+          schema:
+            $ref: '#/definitions/github_com_amirazad1_creditor_api_helper.BaseHttpResponse'
+        "409":
+          description: Failed
+          schema:
+            $ref: '#/definitions/github_com_amirazad1_creditor_api_helper.BaseHttpResponse'
+      summary: Send otp to user
+      tags:
+      - Users
 securityDefinitions:
   AuthBearer:
     in: header
